Major refactoring and improvments

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,21 @@
-* {
-    margin: 0;
-    padding: 0;
+html, body {
+    width: 100%;
+    height: 100%;
+}
+#header {
+    width: 100%;
+    height: 100%;
+    background: black;
+}
+
+#canvas {
+    width: 100%;
+    height: 80%;
+    margin-top: 5%;
+    float: left;
+    background: url('../img/screenshot.png') center center black;
+}
+
+#share {
+    margin-bottom: 20px;
 }
