--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,11 @@ html, body {
     width: 100%;
     height: 80%;
     overflow: hidden;
-    background: url('../img/screenshot.png') center center black;
+    background: url('../img/screenshot.png') center center black no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .description-img {
